--- a/index.html
+++ b/index.html
@@ -6,27 +6,44 @@
     <link rel="stylesheet" href="styles/styles_navbar.css">
     <link rel="stylesheet" href="styles/styles_contact_page.css">
     <title>Document</title>
-
+    <link rel="stylesheet" href="styles/styles_navbar.css">
+    <link rel="stylesheet" href="https://www.fontspace.com/public-pixel-font-f72305">
+    <script src="https://kit.fontawesome.com/d1ca0df29f.js" crossorigin="anonymous"></script>
+ 
 </head>
-<body>
-    <nav class="navbar">
-        <ul>
-            <a class="active" href="#contact">
-                    Domovská stranka
-            </a>
-            <a href="/projects.html">
-                    Projekty
-            </a>     
-            <a href="/contact.html">
-                    Kontakty
-            </a>
-        </ul>
-    </nav>
-</body>
+<html>
+    <body>
+        <nav class="navbar">
+            <ul>
+                <a class="active" href="#contact">
+                    <i class="fa-solid fa-house"></i>
+                        Domovská stranka
+                </a>
+                <a href="/projects.html">
+                    <i class="fa-solid fa-hand-holding-heart"></i>
+                        Projekty
+                </a>     
+                <a href="/contact.html">
+                    <i class="fa-solid fa-address-book"></i>
+                        Kontakty
+                </a>
+            </ul>
+        </nav>
+        <div class="content">
+            <div style="display: flex;">
+                <div style="flex: 1;"><img src="https://i.pinimg.com/736x/6b/f7/9c/6bf79cf13523b56a54f01fef38613280.jpg" alt=""></div>
+                <div style="flex: 1;">rufhirhgorgoi</div>
+              </div>
+        </body>
+        </html>
+        <footer>
+        👻Sofiia Dobrovolska
+        <p>
+            <a href="mailto:s2024dobrovolskasofiia@skolabaltaci.cz">s2024dobrovolskasofiia@skolabaltaci.cz</a>
+        </p>
+        </footer>
+    
+        </html>
+        </div>
+    </body>
 </html>
-<footer>
-    Copyrite Sofiia Dobrovolska
-    <p>
-        <a href="mailto:s2024dobrovolskasofiia@skolabaltaci.cz">s2024dobrovolskasofiia@skolabaltaci.cz</a>
-    </p>
-</footer>
